--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "autoprefixer": "<10.0.0",
     "core-js": "^3.6.5",
+    "tailwindcss": "^1.8.10",
     "vue": "^2.6.11"
   },
   "devDependencies": {
